---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: ???
  Changes:
    - ???
  Bug fixes:
    - Fixed personal roboports losing quality
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2023.11.15
  Changes:
    - Added tooltips for quality modules
  Bug fixes:
    - Fixed technology unlocks causes a stack overflow in certain cases
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2023.11.14
  Changes:
    - Added deleveler and deleveling recipes
  Bug fixes:
    - Fixed equipment quality overlays
    - Fixed recycling of certain items
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023.11.12
  Changes:
    - Allow for 2x modules in AM3 to allow 2x prod/eff modules
    - More visible quality overlays
  Bug fixes:
    - Fixed normal productivity modules not working for higher quality recipes
    - Support creative-mod
    - Fixed dark_background_icons on quality
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2023.11.11
  Bug fixes:
    - Fixed "items with no sa bonus" causing crash due to missing quality upgrades
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2023.11.11
  Bug fixes:
    - Fixed higher quality quality enhancing machines losing quality when mined
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2023.11.11
  Changes:
    - Faster startup
    - Support for fast replace and upgrades between quality entities
  Bug fixes:
    - Fix for upgrade planner jumping qualities